--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "@types/lodash-es": "^4.17.12",
     "@types/react": "^19.1.8",
     "ansi-escapes": "^7.0.0",
+    "bun": "^1.2.20",
     "chalk": "^5.4.1",
     "cli-highlight": "^2.1.11",
     "cli-table3": "^0.6.5",
@@ -67,14 +68,16 @@
     "figures": "^6.1.0",
     "glob": "^11.0.3",
     "highlight.js": "^11.11.1",
-    "ink": "^5.2.1",
+    "ink": "^6.2.2",
     "ink-link": "^4.1.0",
     "lodash-es": "^4.17.21",
     "lru-cache": "^11.1.0",
     "marked": "^15.0.12",
     "nanoid": "^5.1.5",
     "openai": "^4.104.0",
-    "react": "18.3.1",
+    "react": "19.1.1",
+    "react-reconciler": "0.32.0",
+    "signal-exit": "^3.0.7",
     "semver": "^7.7.2",
     "shell-quote": "^1.8.3",
     "spawn-rx": "^5.1.2",
@@ -110,6 +113,9 @@
     "command-line"
   ],
   "bundledDependencies": [
+    "tsx"
+  ],
+  "bundleDependencies": [
     "tsx"
   ]
 }
